docs.composable.ai

--- a/docs/01.Getting-Started/01.Overview.md
+++ b/docs/01.Getting-Started/01.Overview.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Composable DataOps Platform
 
 Composable DataOps Platform is a full-stack intelligent data operations platform with built-in services for data orchestration, automation and analytics. It accelerates data engineering, preparation and analysis. Composable is built as a modern, native cloud application, with a highly scalable – *composable* – architecture.
