--- a/docs/01.Getting-Started/02.System-Requirements.md
+++ b/docs/01.Getting-Started/02.System-Requirements.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # System Requirements
 
 Before installing and deploying Composable on-premises, the following system and network requirements must be met. The requirements specified below are nominal requirements for an simple enterprise deployment. For more complex deployments or tactical edge deployments, please consult with us at [support@composable.ai](mailto:support@composable.ai).
