--- a/docs/03.DataFlows/01.Overview.md
+++ b/docs/03.DataFlows/01.Overview.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Overview
 
 Composable focuses on bringing together disparate datasets, disseminating results, and producing data feeds and services. The platform's strength and inifinte flexibility for consuming, querying, and joining of data is achieved by composing event-driven workflows.
