--- a/docs/03.DataFlows/02.Composable-Designer.md
+++ b/docs/03.DataFlows/02.Composable-Designer.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Composable Designer
 
 The Composable Designer is where users can compose, or author, their DataFlow Applications. The Composable Designer consists of a rich, modern and web-based user interface design tool for flow-based programming. This design tool is where users in Composable can compose, or author, their DataFlow Applications.
