--- a/docs/03.DataFlows/04.Modules.md
+++ b/docs/03.DataFlows/04.Modules.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Composable Modules
 
 Composable Modules are functional blocks that have multiple inputs and outputs. A module is analogous to a function in any programming language. A module takes in one or many inputs, and produces one or many outputs. These outputs can then be connected to any number of other module inputs.
