--- a/docs/01.Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/01.Getting-Started/03.Installation-and-Deployment.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Installation and Deployments
 
 Composable is very easy to deploy in the cloud, within an on-premise datacenter or at the tactical edge.
