--- a/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
+++ b/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
@@ -1,3 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # DataStudio Keyboard Shortcuts
 
 |Shortcut|Function|Description|
