--- a/docs/03.DataFlows/05.DataFlows.md
+++ b/docs/03.DataFlows/05.DataFlows.md
@@ -1,2 +1,11 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # DataFlow Applications
 
