--- a/docs/03.DataFlows/10.DataFlow-Patterns.md/01.Overview.md
+++ b/docs/03.DataFlows/10.DataFlow-Patterns.md/01.Overview.md
@@ -1,2 +1,12 @@
+---
+title: Composable Docs
+summary: Technical Documentation for the Composable DtataOps Platform
+authors:
+    - Composable Analytics, Inc.
+date: 2014-08-12
+some_url: https://docs.composable.ai
+---
+
 # Overview
+
 
