docs.composable.ai

--- a/docs/03.DataFlows/02.Composable-Designer.md
+++ b/docs/03.DataFlows/02.Composable-Designer.md
@@ -15,6 +15,11 @@ To create a new DataFlow, click on DataFlow or select DataFlow > Create New from
 
 The Composable Designer user interface is made up of five primary areas: the canvas, the module library, the toolbar, the properties panel, and the output and progress panel.
 
+
+    ![Composable DataFlow Application](../img/03.02.Img_1.png)
+
+    
+
 ## Designer Canvas
 
 The canvas area is the main working area for the Composable Designer, where modules are placed and connected to form full DataFlow Applications. Once Modules are placed on the canvas, they can be moved around, resized, and connected with other modules. While the execution order of the modules are determined by the underlying graph structure of the DataFlow, it is recommeded to take a left-to-right or top-to-bottom layout for optimal human-readability.
