--- a/docs/03.DataFlows/01.Overview.md
+++ b/docs/03.DataFlows/01.Overview.md
@@ -16,3 +16,6 @@ Composable DataFlow Applications ("DataFlows") are event-driven workflows that c
 At its core, a DataFlow is a directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs. DataFlows are authored using an intuitive, flow-based programming methodology available in the [Composable Designer](../3.2-Composable-Designer.md).
 
 For developers, DataFlows can represent microservices, and can be used in a microservice-based approach to building large software applications. DataFlows are independently deployable services that are part of a broader Microservice Architecture.
+
+
+    ![Composable DataFlow Application](../img/03.01.Img_1.png)
