docs.composable.ai

--- a/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
+++ b/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
@@ -7,7 +7,7 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
-# DataStudio Keyboard Shortcuts
+# Composable Designer Keyboard Shortcuts
 
 |Shortcut|Function|Description|
 |---|:---:|:---:|
@@ -29,6 +29,6 @@ some_url: https://docs.composable.ai
 |Ctrl+A|Select All|Selects all modules on the design surface.|
 
 
-*You can view the keyboard shortcuts from within DataStudio by clicking on the question-mark icon outlined in red.*
-![Screenshot](~/images/KeyboardShortcuts.png)
+*You can view the keyboard shortcuts from within the Designer by clicking on the question-mark icon outlined in red.*
+![Composable DDesigner Keyboard Shortcuts](../img/03.03.Img_1.png)
 
