--- a/docs/03.DataFlows/04.Modules.md
+++ b/docs/03.DataFlows/04.Modules.md
@@ -21,7 +21,7 @@ Composable includes hundreds of first-class modules that are developed by the pr
 
 ## Application Reference Module
 
-Custom modules may be created by creating a new DataFlow with externalized inputs and outputs. For more information, please see [DataFlow Reuse](../3.5-DataFlow-Reuse.md). These Application Reference Modules may then be found under  the My DataFlows or Search All DataFlows categories in the Module Library.
+Custom modules may be created by creating a new DataFlow with externalized inputs and outputs. For more information, please see [DataFlow Reuse](./06.DataFlow-Reuse.md). These Application Reference Modules may then be found under  the My DataFlows or Search All DataFlows categories in the Module Library.
 
 ## Custom Module Extensions
 
