docs.composable.ai

--- a/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
+++ b/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
@@ -10,25 +10,31 @@ some_url: https://docs.composable.ai
 # Composable Designer Keyboard Shortcuts
 
 |Shortcut|Function|Description|
-|---|:---:|:---:|
 |Ctrl+K|Show Diff|Shows un-saved changes in current application (added/removed modules, added/removed connections, module inputs changed, etc).|
 |Ctrl+S|Save|Saves application.|
-|F5|Run Application|Runs present application.|
 |F6|Cancel Run|Cancels an application if running.|
 |Ctrl+Z|Undo|Reverts last change to the application.|
-|Ctrl+Y, Ctrl+Shift+Z|Redo|Redoes last undone change to the application.|
+|Ctrl+Y, |Ctrl+Shift+Z|Redo|Redoes last undone change to the application.|
 |Ctrl+M|Focus Omni Search|Puts browser focus in omni search bar.|
 |Ctrl+[|Minimize All Modules|Minimizes each module.|
-|Ctrl+C|Copy|Copies selected module(s). Note: If a text area is focused this shortcut will still copy text.|
+|Ctrl+C|Copy|Copies selected module(s).| Note: If a text area is focused this shortcut will still copy text.|
 |Ctrl+X|Cut|Cuts selected modules(s).|
 |Ctrl+V|Paste|Pastes module(s) in buffer.|
 |Ctrl+Shift+[|Clear Highlighting|Clears foreach highlighting (added by right click 'Show children' on a module).|
+|Ctrl+enter|Run App / Confirm Save|If the saving modal is open, this will confirm saving the application.| If closed, this will run the application.|
 |Ctrl+I|Palette Search Focus|Puts browser focus in module pallete search.|
 |Del|Delete Selected|Deletes selected modules.|
 |Ctrl+E|Disable/Enable Selected|Toggles enabled status of selected module(s).|
 |Ctrl+A|Select All|Selects all modules on the design surface.|
-
+|Ctrl+Shift+.||Cleanup|Organizes modules on the design surface.|
+|Ctrl+Shift+X|Close All Dialogs|Close all open result/input dialogs.|
+|Arrow Keys|Pan|Pan in that direction.|
+|Spacebar|Page down|Scroll down one screen length|
+|Shift+Spacebar|Page up|Scroll up one screen length|
+|Alt+T|Toggle trace log|View errors and warnings for the DataFlow.|
+|Alt+I|Toggle info panel|View and update DataFlow information, like Name, Description, and Settings|
+|Alt+M|Toggle module palette|Access modules|
 
 *You can view the keyboard shortcuts from within the Designer by clicking on the question-mark icon outlined in red.*
-![Composable DDesigner Keyboard Shortcuts](../img/03.03.Img_1.png)
 
+![Composable DDesigner Keyboard Shortcuts](../img/03.03.Img_1.png)
