docs.composable.ai

--- a/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
+++ b/docs/03.DataFlows/03.KeyBoard-Shortcuts.md
@@ -9,7 +9,8 @@ some_url: https://docs.composable.ai
 
 # Composable Designer Keyboard Shortcuts
 
-|Shortcut|Function|Description|
+|Shortcut|Function|Description|Notes|
+| ------------ | ------------- | ------------ | ------------ |
 |Ctrl+K|Show Diff|Shows un-saved changes in current application (added/removed modules, added/removed connections, module inputs changed, etc).|
 |Ctrl+S|Save|Saves application.|
 |F6|Cancel Run|Cancels an application if running.|
