docs.composable.ai

--- a/docs/01.Getting-Started/02.System-Requirements.md
+++ b/docs/01.Getting-Started/02.System-Requirements.md
@@ -37,7 +37,10 @@ Before installing and deploying Composable on-premises, the following system and
 
 **Desktop Browsers**
 
-- Internet Explorer 10 - 11, or later
+!!! note
+    Composable Version 2.0.0 and later officially drops support for versions of Internet Explorer that are now unsupported by Microsoft. Internet Explorer 11 on Windows 7 or higher remains supported.
+
+- Internet Explorer 11, or later
 - Edge (latest stable version)
 - Firefox (latest stable version)
 - Google Chrome (latest stable version)
