--- a/docs/02.Composable-Platform/01.Overview.md
+++ b/docs/02.Composable-Platform/01.Overview.md
@@ -9,3 +9,13 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+As the saying goes, "Data is eating the software that is eating the world," and data professionals need a rich, coherent and cohesive ecosystem to build data-driven applications. Welcome to Composable DataOps Platform, the industry's leading Intelligent DataOps solution.
+
+Data professionals - software developers, data engineers, data scientists, analysts, IT and business users - are responsible for delivering and leveraging data products. And these data professionals are increasingly adopting DevOps and DataOps best practices through end-to-end platforms like Composable, to quickly and easily operationalize their data intelligence solutions.
+
+Composable is a full-stack data operations platform that is a proven technology for operationalizing AI and ML applications.
+
+!!! note "Why DataOps Matters"
+    “28% of applications do not make it into production” - (Gartner Research)[https://composable.ai/composable-gartner-dataops/]
+
+In this sections, we will review the main structure, navigation and product areas of the Composable DataOps Platform.
