docs.composable.ai

--- a/docs/02.Composable-Platform/02.Navigation.md
+++ b/docs/02.Composable-Platform/02.Navigation.md
@@ -30,7 +30,9 @@ As you can see on the above screenshot, the username shown is in the form domain
 
 # Smart Navigation
 
-Composable has two main menus for navigation.
+Composable has been designed in such a way that pages are organized logically, information and controls are easy to find and use, layouts are responsive down to the smallest desktop screen sizes, colors are thematic, and actions have obvious and visual consequences.
+
+For navigation, Composable has two main menus: sidebar and topbar.
 
 ## SideBar
 
@@ -44,6 +46,6 @@ The sidebar also includes a global search widget. This is the fastest way to fin
 
 ## TopBar
 
-While the SideBar provides full navigation across all of Composable's product areas, the TopBar across each page in Composable, provides a less-cluttered view of the current resource and key links. The TopBar will display the name of the current resource, links to your user profile, version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
+While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your user profile, version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
 
     ![Composable NavBars](../img/02.05.Composable2.0_TopBar.png)
