docs.composable.ai

--- a/docs/02.Composable-Platform/01.Overview.md
+++ b/docs/02.Composable-Platform/01.Overview.md
@@ -16,6 +16,6 @@ Data professionals - software developers, data engineers, data scientists, analy
 Composable is a full-stack data operations platform that is a proven technology for operationalizing AI and ML applications.
 
 !!! note "Why DataOps Matters"
-    “28% of applications do not make it into production” - (Gartner Research)[https://composable.ai/composable-gartner-dataops/]
+    “28% of applications do not make it into production” - [Gartner Research](https://composable.ai/composable-gartner-dataops/)
 
 In this sections, we will review the main structure, navigation and product areas of the Composable DataOps Platform.
