--- a/docs/02.Composable-Platform/02.Navigation.md
+++ b/docs/02.Composable-Platform/02.Navigation.md
@@ -9,14 +9,14 @@ some_url: https://docs.composable.ai
 
 # Registration & Login
 
-Using any modern web browser, point to your organization's Composable instance (e.g., (Demo Instance)[https://cloud.composableanalytics.com]. If you already have an account, simply enter your credentials on the login screen.
+Using any modern web browser, point to your organization's Composable instance (e.g., [Demo Instance](https://cloud.composableanalytics.com) ). If you already have an account, simply enter your credentials on the login screen.
 
     !(Composable Registration)[../img/02.01.Composable2.0_Login.png]
 
 The login tab also has links that can help you reset your password if forgotten. If you need to register, simply click on the Register tab, as shown below, and enter your information.
 
     !(Composable Registration)[../img/02.02.Composable2.0_Reg.png]
-    
+
 !!! note
     Once registered, a system admin will need to approve your account, and you will receive an e-mail notification once approved.
 
