--- a/docs/01.Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/01.Getting-Started/03.Installation-and-Deployment.md
@@ -43,7 +43,7 @@ Composable is used to build *operational* data-intensive applications, and as su
 
 ## Upgrades
 
-For on-premise installations and upgrades, a system admin can perform an installation or upgrade by simply following the Composable installation wizard. When upgrading an instance, an upgrade path is provided for Modules (see [Modules](../03.DataFlows/04.Modules.md)).
+For on-premise installations and upgrades, a system admin can perform an installation or upgrade by simply following the Composable installation wizard. When upgrading an instance, an upgrade path is provided for Modules (see [Modules](03.DataFlows/04.Modules.md)).
 
 ### Composable Installation Wizard
 
@@ -52,63 +52,63 @@ The Composable installation wizard will provide the following steps:
 1. Check system and software requirements.
     - The installer will check system requirements, space availability and automatically download and install any required software, such as a back-end database store. Specifically, SQL Server Express will be downloaded and installed as a back-end database if required. Composable will leverage the full-text indexer if you install SQL Server with advanced services.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_1.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_1.png)
     
 2. With all system and software requirements met, the next steps in the Composable installation will be presented.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_2.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_2.png)
 
 3. **End-User License Agreement**
     - You will be asked to accept the terms in the License Agreement. 
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_3.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_3.png)
 
 4. **Setup Type**
     - Installation options will be presented. For a single machine install, choose Complete. If you want to only install certain components, choose Custom.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_4a.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_4a.png)
 
     - The components include databases, NT services, and a web application.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_4b.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_4b.png)
 
 5. **Membership Store Settings**
     - If using SQL Express, the local server and instance would be .\SQLEXPRESS. For the default host, it’s just “.”
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_5.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_5.png)
 
 6. **Admin Account Settings**
     - Enter a system administrator e-mail address, username and password. This will be the initial administrator of the system. Please keep a record of these credentials.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_6.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_6.png)
 
 7. **Database Settings**
     - If using SQL Express, the local server and instance would be .\SQLEXPRESS. For the default host, it’s just “.”
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_7.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_7.png)
 
 8. **Server Settings**
     - Set the base path of the IIS web site. For a single / local machine http://localhost is fine. If on a corporate network, and you have a http proxy, set it here. An SMTP Server is also required to manage account registrations (e.g., e-mail registration confirmations and notifications).
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_8.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_8.png)
 
 9. **Additional Server Settings**
     - You can set the Composable Runs directory folder on this screen.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_9.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_9.png)
 
 10. **Web Application Settings**
     - Anonymous Access: You can optionally choose to allow anonymous access. Anonymous users will be able to see any Composable resources shared with ‘Everyone’.
 
     - Windows Authentication: You can optionally choose to sync the Composable instance with Exchange / Active Directory to enable Single-Sign-On (SSO) in an enterprise settings.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_10.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_10.png)
 
 11. **License File**
     - You will be prompted to cut/paste a license key here. Please contact info@composable.ai for a commercial license. If you do not currently have a license, you can continue with the installation, and activate your instance at a later time.
 
-    ![Composable Installation Wizard](../img/01.03.ComposableInstaller_11.png)
+    ![Composable Installation Wizard](img/01.03.ComposableInstaller_11.png)
 
 After these options are set, you can begin the installation. The wizard will copy all the files to your local disk, configure all databases for you, and will turn on IIS and necessary components to run the web application.
 
-![Composable Installation Wizard](../img/01.03.ComposableInstaller_11.png)
+![Composable Installation Wizard](img/01.03.ComposableInstaller_11.png)
