--- a/docs/02.Composable-Platform/05.System-Administration.md
+++ b/docs/02.Composable-Platform/05.System-Administration.md
@@ -7,11 +7,9 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
-Composable provides system level features to help users manage their resources within the platform, as well as to 
-
+Composable provides system level features to help users manage their resources within the platform. Key functions for system administrators are also available.
 
 # Resource Management
-
 
 ## Users
 
