deployment public cloud

--- a/docs/01.Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/01.Getting-Started/03.Installation-and-Deployment.md
@@ -22,7 +22,7 @@ In an n-tiered deployment model, the above system components can be distributed 
 
 ## Cloud
 
-Deployment on one of the public clouds (e.g., Azure, AWS) is simple and straightforward. Composable is available in the cloud marketplaces, see, for example, [Azure](https://azure.microsoft.com/en-in/marketplace/partners/composable/composable) or [AWS](https://aws.amazon.com/marketplace/seller-profile?id=911f5969-ae5e-4de9-acca-b8f606972771). Simply follow the installation wizard on the portal to spin up a virtual machine with Composable already configured.
+Deployment on one of the public clouds (e.g., Azure, AWS) is simple and straightforward. Composable is available in the cloud marketplaces, see, for example, [Azure](https://azure.microsoft.com/en-in/marketplace/partners/composable/composable) or [AWS](https://aws.amazon.com/marketplace/seller-profile?id=911f5969-ae5e-4de9-acca-b8f606972771). Simply follow the installation wizard on the portal to spin up a virtual machine with Composable already configured. For a detailed walkthrough of the process, please see [Public Cloud Deployment](/04.Public-Cloud-Deployment.md).
 
 A development cloud instance is available for evaluation purposes. Please visit [cloud.composableanalytics.com](https://cloud.composableanalytics.com/), and begin by creating an account.
 
