--- a/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
+++ b/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
@@ -31,19 +31,16 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
     ![AWS Composable Installation Wizard](img/01.04.AWS_Install_04.png)
 
 5. Select, finalize and review configuration, then click Launch.
-    - Review the usage instructions, copied below for reference.
-    
-    > Composable DataOps Platform can be accessed via any browser (Chrome, Firefox, IE, Edge, ...). Once the instance is running, you can point your web browser to http://<public hostname>/CompAnalytics/, where <public hostname> is the public IP address for your instance (e.g., ec2-12-345-678-90.us-west-2.compute.amazonaws.com) listed in the EC2 Dashboard within the AWS Console. You may also connect to this instance directly using Remote Desktop Connection, and navigate to localhost/CompAnalytics. The password for username "admin" will be dynamically set to the EC2 instance ID. (e.g., username "admin" and password "i-03cfe92f81f787655"). Instance ID can be retrieved from the AWS Console once your VM is launched. You may modify rules in the security group to control the inbound and outbound traffic to this instance.
-    
+    - Review the usage instructions, copied below for reference.    
     - Select Choose Action - this is purely your preference of continuing via this webpage or continuing in the EC2 AWS Console.
-
     - EC2 Instance Type - This is where you select the VM size. We reccomend the m5.xlarge VM size, but smaller sizes, such as m3.medium can work as well.
-
     - VPC Settings, Subnet settings, Security Group Settings and Key Pair settings - please select from exisiting options already configured in your AWS account, or create new ones as needed.
-
     - Finally, click Launch!
 
     ![AWS Composable Installation Wizard](img/01.04.AWS_Install_05.png)
+
+    !!! AWS Usage Instructions
+        Composable DataOps Platform can be accessed via any browser (Chrome, Firefox, IE, Edge, ...). Once the instance is running, you can point your web browser to http://<public hostname>/CompAnalytics/, where <public hostname> is the public IP address for your instance (e.g., ec2-12-345-678-90.us-west-2.compute.amazonaws.com) listed in the EC2 Dashboard within the AWS Console. You may also connect to this instance directly using Remote Desktop Connection, and navigate to localhost/CompAnalytics. The password for username "admin" will be dynamically set to the EC2 instance ID. (e.g., username "admin" and password "i-03cfe92f81f787655"). Instance ID can be retrieved from the AWS Console once your VM is launched. You may modify rules in the security group to control the inbound and outbound traffic to this instance.
 
 # Azure Marketplace
 
@@ -54,14 +51,17 @@ Composable is available in the Azure Marketplace at [Azure](https://azure.micros
     
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_01.png)
     
+
 2. From the Azure Portal, once logged in, you can also select add New Resource, and search for 'composable'. 
     - You can review product information, including full pricing estimates.
 
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_02.png)
 
+
 3. Once you select Composable, you can review the product information and click Create.
 
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_03.png)
+
 
 4. Azure will present a 5-step wizard to select settings, VM size review pricing and terms.
     - The following screenshots represent the steps in the deployment wizard.
@@ -69,7 +69,6 @@ Composable is available in the Azure Marketplace at [Azure](https://azure.micros
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_04.png)
 
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_05.png)
-
 
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_06.png)
 
