deployment public cloud

--- a/docs/03.DataFlows/06.DataFlow-Reuse.md
+++ b/docs/03.DataFlows/06.DataFlow-Reuse.md
@@ -17,7 +17,10 @@ Code resuse is the use of existing code across multiple applications. Software e
 
 ## Step-by-step Example
 
-As an example of code reuse, let us assume that we need to perform an identical task many times, either within a single DataFlow or by multiple distinct DataFlows. For this example, the repeated task takes in a specific column of a table, performs an aggregation (e.g., SUM, AVG, or COUNT), and outputs the result. We can compose a DataFlow for this task, utilizing first-class modules wrapped with External Input and External Output modules, and save it as its own DataFlow. The External Input and Output modules essentially expose the inputs and outputs of this DataFlow within a parent DataFlow.
+As an example of code reuse, let us assume that we need to perform an identical task many times, either within a single DataFlow or by multiple distinct DataFlows. For this example, the repeated task takes in a specific column of a table, performs an aggregation (e.g., SUM, AVG, or COUNT), and outputs the result. We can compose a DataFlow for this task, utilizing first-class modules wrapped with External Input and External Output modules, and save it as its own DataFlow.
+
+!!! Note
+    The External Input and Output modules work to expose the inputs and outputs of a DataFlow within a parent DataFlow. Use the correct External Input and Output modules based on the data type required (e.g., string, boolean, table, etc.).
 
 Here is what this DataFlow will look like.
 
