--- a/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
+++ b/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
@@ -39,7 +39,7 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
 
     ![AWS Composable Installation Wizard](img/01.04.AWS_Install_05.png)
 
-    !!! AWS Usage Instructions
+    !!! Usage-Instructions
         Composable DataOps Platform can be accessed via any browser (Chrome, Firefox, IE, Edge, ...). Once the instance is running, you can point your web browser to http://<public hostname>/CompAnalytics/, where <public hostname> is the public IP address for your instance (e.g., ec2-12-345-678-90.us-west-2.compute.amazonaws.com) listed in the EC2 Dashboard within the AWS Console. You may also connect to this instance directly using Remote Desktop Connection, and navigate to localhost/CompAnalytics. The password for username "admin" will be dynamically set to the EC2 instance ID. (e.g., username "admin" and password "i-03cfe92f81f787655"). Instance ID can be retrieved from the AWS Console once your VM is launched. You may modify rules in the security group to control the inbound and outbound traffic to this instance.
 
 # Azure Marketplace
