--- a/docs/03.DataFlows/04.Modules.md
+++ b/docs/03.DataFlows/04.Modules.md
@@ -25,6 +25,6 @@ Custom modules may be created by creating a new DataFlow with externalized input
 
 ## Custom Module Extensions
 
-Custom modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin” template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the OK button. The default plugin template comes with an example module plugin that can be modified to create a custom module with custom inputs and outputs.
+Custom Modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin” template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the OK button. The default plugin template comes with an example module plugin that can be modified to create a custom module with custom inputs and outputs.
 
-After importing a Custom Module Extension into the Composable instance, these custom modules appear as first-class modules in the Module Library.
+After importing a Custom Module Extension into the Composable instance, these custom modules appear as first-class modules in the Module Library. The following [Custom Modules Extensions](./08.Custom-Modules.md) page includes more detailed information on authoring your own Modules.
