--- a/docs/03.DataFlows/05.DataFlows.md
+++ b/docs/03.DataFlows/05.DataFlows.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
 ## Overview
 
-Composable focuses on bringing together disparate datasets, disseminating results, and producing data feeds and services. The platform's strength and inifinte flexibility for consuming, querying, and joining of data is achieved by composing event-driven workflows.
+Composable focuses on bringing together disparate datasets, disseminating results, and producing data feeds and services. The platform's strength and inifinite flexibility for consuming, querying, and joining of data is achieved by composing event-driven workflows.
 
 Composable DataFlow Applications ("DataFlows") are event-driven workflows that consists of functional blocks, ["modules"](../3.2-Modules.md), strung together with connections to form full analytical workflows.
 
