--- a/docs/09.Keys/01.Overview.md
+++ b/docs/09.Keys/01.Overview.md
@@ -9,3 +9,18 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+ Saving passwords and other access credentials in clear text on a file on your desktop, or on a sticky note posted on your desk, is neither secure nor scalable. Rather, the use of a password manager as an encrypted digital vault for all access credentials provides an easy-to-use, scalable and secure way to use, manage and share credentials, as needed. Password managers are especially useful when building data operations processes that integrate data from a number of different sources, each with its own unique access credentials.
+
+ Composable provides a built-in password manager used to store and retrieve access credentials (e.g., username and password combinations, API secret keys, SSH tokens, etc.). You can think of Composable's password manager as a **Key Vault**, storing passwords and other credentials in an encrypted database. Keys in Composable eliminates the need to:
+
+- store passwords in local files
+- hard-code sensitive credential information in code or scripts
+- share sensitive credential information via email or instant messages.
+
+The benefits of using Composable's built-in Keys are:
+
+- Ability to save all types of complex access credentials (everything from a password to an SSH token), in a secure way
+- Central management of Keys at the User and Group level
+- Ability to Tag Keys or place Keys in Folders, to support a larger project
+- Ability to share Keys at a granular level (e.g., discover, execute, read, write) with Users and Groups
+- Complete Audit trails
