--- a/docs/02.Composable-Platform/04.Product-Areas.md
+++ b/docs/02.Composable-Platform/04.Product-Areas.md
@@ -1,6 +1,6 @@
 ---
 title: Composable Docs
-summary: Technical Documentation for the Composable DtataOps Platform
+summary: Technical Documentation for the Composable DataOps Platform
 authors:
     - Composable Analytics, Inc.
 date: 2014-08-12
