--- a/docs/03.DataFlows/11.Alerts.md
+++ b/docs/03.DataFlows/11.Alerts.md
@@ -1,6 +1,6 @@
 ---
 title: Composable Docs
-summary: Technical Documentation for the Composable DtataOps Platform
+summary: Technical Documentation for the Composable DataOps Platform
 authors:
     - Composable Analytics, Inc.
 date: 2014-08-12
