--- a/docs/09.Keys/01.Overview.md
+++ b/docs/09.Keys/01.Overview.md
@@ -1,6 +1,6 @@
 ---
 title: Composable Docs
-summary: Technical Documentation for the Composable DtataOps Platform
+summary: Technical Documentation for the Composable DataOps Platform
 authors:
     - Composable Analytics, Inc.
 date: 2014-08-12
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
  Saving passwords and other access credentials in clear text on a file on your desktop, or on a sticky note posted on your desk, is neither secure nor scalable. Rather, the use of a password manager as an encrypted digital vault for all access credentials provides an easy-to-use, scalable and secure way to use, manage and share credentials, as needed. Password managers are especially useful when building data operations processes that integrate data from a number of different sources, each with its own unique access credentials.
 
- Composable provides a built-in password manager used to store and retrieve access credentials (e.g., username and password combinations, API secret keys, SSH tokens, etc.). You can think of Composable's password manager as a **Key Vault**, storing passwords and other credentials in an encrypted database. Keys in Composable eliminates the need to:
+ Composable provides a built-in password manager used to store and retrieve access credentials (e.g., username and password combinations, API secret keys, SSH tokens, etc.). You can think of Composable's password manager as a **Key Vault**, storing passwords and other credentials in an encrypted database. Keys in Composable **eliminates** the need to:
 
 - store passwords in local files
 - hard-code sensitive credential information in code or scripts
