--- a/docs/13.Quick-Reference-Guides/01.Overview.md
+++ b/docs/13.Quick-Reference-Guides/01.Overview.md
@@ -1,6 +1,6 @@
 ---
 title: Composable Docs
-summary: Technical Documentation for the Composable DtataOps Platform
+summary: Technical Documentation for the Composable DataOps Platform
 authors:
     - Composable Analytics, Inc.
 date: 2014-08-12
