--- a/docs/05.DataPortals/01.Overview.md
+++ b/docs/05.DataPortals/01.Overview.md
@@ -9,3 +9,6 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+Composable DataPortals are a fast and easy way to set up a custom database for your data. Define your data model as a series of tables in an Excel workbook, drag it into Composable, and have the platform generate a full database, and UI, with the data model you defined.
+
+Once your database is created, you'll be taken into a web-based viewer and editor for your data. This fully customizable interface allows you or your users to create, view, and edit data in your new database in an interactive web form, with zero code or technical knowledge required.
