--- a/docs/08.WebApps/01.Overview.md
+++ b/docs/08.WebApps/01.Overview.md
@@ -9,3 +9,4 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+Composable WebApps is a full-stack web application development resource built into the Composable DataOps Platform. Applications ranging from single-page web apps to industrial-grade, production enterprise applications can be built using WebApps, with zero or low code.
