--- a/docs/04.QueryViews/01.Overview.md
+++ b/docs/04.QueryViews/01.Overview.md
@@ -9,3 +9,12 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+Composable QueryViews leverage Composable's built-in distributed SQL query engine for running interactive SQL queries. Simply use a Composable Key to connect to a SQL data source, and query the data where it lives. This includes relational databases or more modern data stores such as Hive!
+
+QueryViews are great at creating live datagrids of data, and provide an interface for just-in-time, interactive analytics. With built-in paging, you can query millions of rows of data, and page through the results.
+
+To get started, simply click on the datagrid icon in the sidebar:
+
+![Composable QueryView Sidebar](img/04.01.Img_1.png)
+
+
