--- a/docs/04.QueryViews/01.Overview.md
+++ b/docs/04.QueryViews/01.Overview.md
@@ -17,4 +17,15 @@ To get started, simply click on the datagrid icon in the sidebar:
 
 ![Composable QueryView Sidebar](img/04.01.Img_1.png)
 
+.. image:: img/04.01.Img_1.png
+   :width: 200px
+   :height: 100px
+   :scale: 50 %
+   :alt: Composable QueryView Sidebar
+   :align: right
 
+.. figure:: img/04.01.Img_1.png
+   :scale: 50 %
+   :alt: Composable QueryView Sidebar
+
+Composable QueryView Sidebar
