--- a/docs/04.QueryViews/01.Overview.md
+++ b/docs/04.QueryViews/01.Overview.md
@@ -15,17 +15,6 @@ QueryViews are great at creating live datagrids of data, and provide an interfac
 
 To get started, simply click on the datagrid icon in the sidebar:
 
-![Composable QueryView Sidebar](img/04.01.Img_1.png)
+![Composable QueryView Sidebar](img/04.01.Img_1.png | width=50)
 
-.. image:: img/04.01.Img_1.png
-   :width: 200px
-   :height: 100px
-   :scale: 50 %
-   :alt: Composable QueryView Sidebar
-   :align: right
-
-.. figure:: img/04.01.Img_1.png
-   :scale: 50 %
-   :alt: Composable QueryView Sidebar
-
-Composable QueryView Sidebar
+![Composable QueryView Sidebar](img/04.01.Img_1.png | width=auto)
