--- a/docs/04.QueryViews/01.Overview.md
+++ b/docs/04.QueryViews/01.Overview.md
@@ -15,6 +15,12 @@ QueryViews are great at creating live datagrids of data, and provide an interfac
 
 To get started, simply click on the datagrid icon in the sidebar:
 
-![Composable QueryView Sidebar](img/04.01.Img_1.png | width=50)
+![Composable QueryView Sidebar](img/04.01.Img_1.png)
 
-![Composable QueryView Sidebar](img/04.01.Img_1.png | width=auto)
+![Composable QueryView Sidebar](img/04.01.Img_1.png)
+
+<img src="img/04.01.Img_1.png" alt="Composable QueryView Sidebar">
+
+<img src="img/04.01.Img_1.png"  width="100" height="au100to" alt="Composable QueryView Sidebar">
+
+<img src="img/04.01.Img_1.png"  width="auto" height="auto" alt="Composable QueryView Sidebar">
