--- a/docs/03.DataFlows/08.Example-DataFlows.md
+++ b/docs/03.DataFlows/08.Example-DataFlows.md
@@ -11,10 +11,11 @@ some_url: https://docs.composable.ai
 
 Below are some example DataFlows that you can build to gain some familiarity with the Composable platform.
 
-## Word Count using Pythn and C#
+## Word Count using Python and C#
 
 In this DataFlow, we will be creating a simple histogram of word frequency in a random block of text.
 While there are simpler approaches to do this, we will use separate Python and C# Modules so that we can specifically show the approach of combining different languages in a single DataFlow. The basic workflow will be as follows:
+
 1. Parse (split) text into a list of words
 2. Calculate the frequency of each word
 
@@ -26,10 +27,9 @@ The Composable Designer will load, and you will be presented with a new canvas a
 
 ![Composable Example DataFlow Creation](img/03.08.Img_1.png)
 
-As explained previously, the Composable Designer is made up of five primary areas: the canvas, the module library, the toolbar, the properties panel, and the output and progress panel. 
+As explained previously, the Composable Designer is made up of five primary areas: the canvas, the module library, the toolbar, the properties panel, and the output and progress panel.
 
 ![Composable Example Blank Canvas](img/03.08.Img_2.png)
-
 
 ### Step 2 - Retrieve Text
 
@@ -50,18 +50,11 @@ Your DataFlow should look like the above. You can even run the DataFlow at this 
 
 The WebClient Module returns a block of text. Our next step will require us to split this string into a list of words. While there are many (simpler) ways to do that in Composable (including a Split String Module), we will use Python here to illustrate the use of Python from within a DataFlow.
 
-Find the Python Code Module in the Module Library and drag and drop it onto the canvas. Then, set the following three inputs ont he Python Code module:
+Find the Python Code Module in the Module Library and drag and drop it onto the canvas. Then, set the following three inputs on the Python Code module:
+
 1. Inputs: Connect the output of the WebClient Module to the Inputs of the Python Code Module.
 
-!!! note
-    Some Module inputs can accept multiple connections. While in this example we are only showing one connection, multiple inputs can be connected into the Inputs parameter of the Python Code Module.
-
-!!! note
-    There are two ways to set input parameters: "hard-code" an input by directly typing in a value in the parameter box or connecting the input from other Module(s) output(s). When both are set (a hard-coded input and a connection), Composable will utilize the connection and ignore the hard-coded input.
-    
-
 2. FunctionName: This will be the name of the Python function to execute. Use 'splitStringFunc'
-
 
 3. Code: Insert Python code for splitting the string:
 
@@ -69,6 +62,12 @@ Find the Python Code Module in the Module Library and drag and drop it onto the 
 def splitStringFunc(inputString):
     return inputString.split()
 ```
+
+!!! note
+    Some Module inputs can accept multiple connections. While in this example we are only showing one connection, multiple inputs can be connected into the Inputs parameter of the Python Code Module.
+
+!!! note
+    There are two ways to set input parameters: "hard-code" an input by directly typing in a value in the parameter box or connecting the input from other Module(s) output(s). When both are set (a hard-coded input and a connection), Composable will utilize the connection and ignore the hard-coded input.
 
 When this Module executes, it will take the text input from the WebClient Module and execute the Python function splitStringFunc.
 
@@ -146,11 +145,9 @@ namespace Example
 !!! note
     This code block outputs a Composable Table, and therefore uses the directive 'using CompAnalytics.Contracts.Tables;.' For more information on Composable Tables, see [this article](https://blog.composable.ai/2016/10/31/advanced-table-manipulation-with-the-code-module/).
 
-
 The result is a table.
 
 ![Composable Example Code Module Output](img/03.08.Img_5b.png)
-
 
 ### Step 5 - View Results
 
